# lab

./: .gitignore  LICENSE
examples/1-strctured-output/: function_call_fail.py  main.py  pyproject.toml
examples/2-structured-output-libs/: README.md  baml_demo.py  benchmark_accuracy.py  data.py  eval.py  instructor_demo.py  prompts.py  pydanticai_demo.py  pyproject.toml  schema.py
examples/2-structured-output-libs/baml_src/: task.baml
examples/3-baml-agent/: main.py  pyproject.toml
examples/3-memory-and-context-window/: main.py  memory.py  pyproject.toml
examples/4-agents/: README.md  main.py  pyproject.toml
examples/5-vllm/: benchmarks.ipynb  main.py  pyproject.toml
